jellyfin_stack/.qBit/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        project: media-server
    spec:
      containers:
      - name: qbittorrent
        image: linuxserver/qbittorrent
        resources:
          limits:
            memory: "2Gi"
          requests:
            memory: "512Mi"
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /data/torrents
        ports:
        - containerPort: 8080

      - name: gluetun
        image: qmcgaw/gluetun:v3.41.1
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - name: gluetun-config
          mountPath: /gluetun

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbitt-config
      - name: downloads
        persistentVolumeClaim:
          claimName: jellyfin-media-pvc
      - name: gluetun-config
        persistentVolumeClaim:
          claimName: gluetun-config
