jellyfin_stack/.qBit/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: jellyfin
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: qbittorrent
