jellyfin_stack/.qBit/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: jellyfin

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`qbittorrent.home.sparhomelab.dev`) # change to your domain
    kind: Rule
    services:
    - name: qbittorrent
      port: 80
    middlewares:
    - name: default-headers-jellyfin
  tls:
    secretName: qbittorrent-tls
